--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <style media="screen">
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+      </style>
+      <title>Character Archive</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +15,112 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="signUpModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="signUpModalLabel">Sign Up Below!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form id="sign-up">
+                <input
+                name="credentials[email]"
+                type="text"
+                placeholder="Enter Email">
+                <input
+                name="credentials[password]"
+                type="password"
+                placeholder="Enter Password">
+                <input
+                name="credentials[password_confirmation]"
+                type="password"
+                placeholder="Confirm Password">
+                <button type="submit" class="btn btn-primary">Sign Up</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="signInModal" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="signInModalLabel">Sign In Below!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form id="sign-in">
+                <input
+                  placeholder="Enter Email"
+                  type="text"
+                  name="credentials[email]"/>
+                <input
+                  placeholder="Enter Password"
+                  type="password"
+                  name="credentials[password]"/>
+                <button type="submit" class="btn btn-primary">Sign In</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form id="change-password">
+                <input
+                  placeholder="Enter Current Password"
+                  type="password"
+                  name="passwords[old]"/>
+                <input
+                  placeholder="Enter New Password"
+                  type="password"
+                  name="passwords[new]"/>
+                <button type="submit" class="btn btn-info">Change Password</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="unauthenticated">
+        <nav class="navbar navbar-dark bg-dark justify-content-sm-center justify-content-lg-end">
+          <button type="button" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1" data-toggle="modal" data-target="#signUpModal">
+            Sign Up
+          </button>
+          <button type="button" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1" data-toggle="modal" data-target="#signInModal">
+            Sign In
+          </button>
+        </nav>
+      </div>
+      <div class="authenticated">
+        <nav class="navbar navbar-dark bg-dark justify-content-sm-center justify-content-lg-end">
+          <button id="sign-out" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1">Sign Out</button>
+          <button type="button" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1" data-toggle="modal" data-target="#changePasswordModal">
+            Change Password
+          </button>
+        </nav>
+      </div>
+      <h1 id="home-message"><p>Let's test this</p></h1>
     </body>
 </html>
