Add ui for index and create response
Character information is now being displayed on the screen whenever
index or create is sent to the api. Began working on delete function.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,30 @@
           </div>
         </div>
       </div>
+      <div class="modal fade" id="deleteCharacterModal" tabindex="-1" aria-labelledby="deleteCharacterModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteCharacterModalLabel">Delete a Character</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form id="delete-character">
+                <select id="delete-drop-down" class="custom-select">
+                  <option selected>Choose your Character</option>
+                  <option value="null">Test</option>
+                </select>
+                <button type="submit" class="btn btn-primary">Delete</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="unauthenticated">
         <nav class="navbar navbar-dark bg-dark justify-content-sm-center justify-content-lg-end">
           <button type="button" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1" data-toggle="modal" data-target="#signUpModal">
@@ -165,11 +189,12 @@
             Change Password
           </button>
         </nav>
-        <h1 id="home-message-authenticated"><p>Let's test this</p></h1>
+        <h2 id="home-message-authenticated"><p>Let's test this</p></h2>
+        <div class="characters-display"></div>
         <button id="characters-index" type="button" class="btn btn-secondary btn-lg btn-block">My Characters</button>
         <button id="characters-new" type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#newCharacterModal">New Character</button>
         <button id="characters-update" type="button" class="btn btn-secondary btn-lg btn-block">Update Character</button>
-        <button id="characters-delete" type="button" class="btn btn-secondary btn-lg btn-block">Delete Character</button>
+        <button id="characters-delete" type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#deleteCharacterModal">Delete Character</button>
         <button id="home-button" type="button" class="btn btn-secondary btn-lg btn-block">Home</button>
       </div>
     </body>
