--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
                   name="character[race]"/>
                 <input
                   placeholder="Age"
-                  type="number"
+                  type="number" min="0" step="1"
                   name="character[age]"/>
                 <input
                   placeholder="Level"
-                  type="number"
+                  type="number" min="0" step="1"
                   name="character[level]"/>
                 <button type="submit" class="btn btn-primary">Create</button>
               </form>
@@ -180,11 +180,11 @@
                   name="character[race]"/>
                 <input
                   placeholder="Age"
-                  type="number"
+                  type="number" min="0" step="1"
                   name="character[age]"/>
                 <input
                   placeholder="Level"
-                  type="number"
+                  type="number" min="0" step="1"
                   name="character[level]"/>
                 <button type="submit" class="btn btn-primary">Update</button>
               </form>
