Fill out README.md and change form requirements
Finished filling out the README.md for the requirements
Updated the required statements in the create form so that last name is
not mandatory.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   placeholder="First Name"
                   type="text"
                   name="character[firstName]"/>
-                <input required
+                <input
                   placeholder="Last Name"
                   type="text"
                   name="character[lastName]"/>
