--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="signUpModalLabel">Sign Up Below!</h5>
+              <h5 class="modal-title" id="signUpModalLabel">Sign Up Below</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -51,7 +51,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="signInModalLabel">Sign In Below!</h5>
+              <h5 class="modal-title" id="signInModalLabel">Sign In Below</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
