Begin styling for client-facing webpage
Added some CSS for the front page and changed the layout
Now matches original wireframes

--- a/index.html
+++ b/index.html
@@ -244,15 +244,15 @@
         </div>
       </div>
       <div class="unauthenticated">
-        <nav class="navbar navbar-dark bg-dark justify-content-sm-center justify-content-lg-end">
-          <button type="button" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1" data-toggle="modal" data-target="#signUpModal">
+        <div class="container">
+            <button type="button" class="btn btn-info btn-outline-light col-12 mr-1" data-toggle="modal" data-target="#signUpModal">
             Sign Up
           </button>
-          <button type="button" class="btn btn-dark btn-outline-light col-lg-2 col-sm-4 mr-1" data-toggle="modal" data-target="#signInModal">
+          <button type="button" class="btn btn-info btn-outline-light col-12 mr-1" data-toggle="modal" data-target="#signInModal">
             Sign In
           </button>
-        </nav>
-        <h1 id="home-message-unauthenticated"><p>Let's test this</p></h1>
+        <h1 id="home-message-unauthenticated"><p>Welcome to the Archive <br> Sign up to begin creating your own characters.</p></h1>
+        </div>
       </div>
       <div class="authenticated">
         <nav class="navbar navbar-dark bg-dark justify-content-sm-center justify-content-lg-end">
